# khmercut.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cc
src/: khmercut.cc  khmercut.h  main.cc
src/lib/: khmercut.cc  khmercut.h
